--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
         "@types/react": "16.0.25",
         "@types/react-dom": "16.0.3",
         "@types/web-bluetooth": "0.0.4",
-        "less": "2.7.3",
-        "semantic-ui-less": "2.2.14",
-        "typescript": "^3.7.5",
         "glob-exec": "^0.1.1",
+        "less": "2.7.3",
+        "react": "16.8.3",
+        "semantic-ui-less": "2.2.14",
         "svgo": "^1.1.1",
-        "react": "16.8.3"
+        "typescript": "^3.7.5"
     },
     "dependencies": {
         "pxt-common-packages": "8.3.1",
